--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,9 @@ body {
   max-width: 400px;
   margin: 0 auto;
   overflow-y: scroll;
-  max-height: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 .user {
@@ -34,6 +36,8 @@ body {
   max-width: 70%;
 }
 
-.user-input textarea{
-  color: black;
+.user-input{
+  height: 100px;
+  position: fixed;
+  transform: translateY(350px);
 }
